<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ET1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:baselineAligned="false"
        android:ems="10"
        android:gravity="right"
        android:inputType="textPersonName"
        android:paddingTop="30pt"
        android:textSize="25pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:longClickable="true"
                android:onClick="onDelete"
                android:text="@string/a_c"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/negate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:onClick="onClickNumber"
                android:text="@string/negate"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/percent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:onClick="onOperate"
                android:text="@string/percentage"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/orange_main"
                android:onClick="onOperate"
                android:text="@string/divide"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_7"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_8"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_9"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/orange_main"
                android:onClick="onOperate"
                android:text="@string/multiply"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_4"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_5"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_6"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonSub"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/orange_main"
                android:onClick="onOperate"
                android:text="@string/minus"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/orange_main"
                android:onClick="onOperate"
                android:text="@string/plus"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/_0"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/point"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:background="@color/lighter_gray"
                android:onClick="onClickNumber"
                android:text="@string/point"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/eval"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:background="@color/orange_main"
                android:onClick="onEval"
                android:text="@string/decimal"
                android:textColor="@color/light_gray" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>